# object-image-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  asgi.py  docker-compose.yaml  env_template  makefile  pyproject.toml  wsgi.py
.github/workflows/: github-actions.yml
apps/: celery.py  object_detector.py
apps/authentication/: serializer.py  urls.py  views.py
apps/authentication/tests/: test_serializers.py  test_views.py
apps/core/: tasks.py  urls.py  views.py
apps/core/tests/: base.py  test_views.py
apps/images/: admin.py  models.py  serializer.py  tasks.py  urls.py  views.py
apps/images/migrations/: 0001_initial.py
apps/images/tests/: test_serializers.py  test_views.py
apps/reports/: admin.py  models.py  report_service.py  serializer.py  tasks.py  urls.py  views.py
apps/reports/migrations/: 0001_initial.py
apps/reports/tests/: test_serializer.py  test_views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_serializers.py
settings/: base.py  development.py  local.py  local.py.orig  production.py
urls/: urls.py
